Fixed bug where navigation bar overlapped content

--- a/now-playing-static/css/styles.css
+++ b/now-playing-static/css/styles.css
@@ -232,4 +232,8 @@ figure {
     float: right;
   }
 
+  .movie {
+    margin-left: 80px;
+  }
+
 }
